# consensus

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.md  run.py  run_consensus.py
.github/workflows/: test.yml
src/: main.py
src/agents/: README.md  academic_affairs.py  base.py  community_impact.py  consensus_coordinator.py  documentation.py  financial.py  financial_officer.py  infrastructure.py  legal_compliance.py  research_innovation.py  student_affairs.py
src/ai/: claude_integration.py
src/config/: config_loader.py  orchestration_config.yaml
src/consensus/: consensus_algorithm.py  consensus_metrics.py  delphi_method.py  weighted_voting.py
src/orchestration/: board_orchestrator.py
src/prompts/: academic_affairs.yaml  community_impact.yaml  consensus_coordinator.yaml  documentation.yaml  financial.yaml  financial_officer.yaml  infrastructure.yaml  legal_compliance.yaml  research_innovation.yaml  student_affairs.yaml
src/utils/: logging.py
src/visualization/: consensus_dashboard.py  consensus_visualizer.py
tests/: run_discussion.py  test_full_discussion.py  test_imports.py
